codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_level_picker__tests__security_level_picker_review_aggressive.snap
---
source: tui/src/bottom_pane/security_level_picker_tests.rs
expression: "render(&picker, 80)"
---
Switch to Aggressive?
These settings replace yours in Corbanu Terminal sessions and their child
agents:
"now" shows this session; web search, environment, shell and roles are as loaded
at launch.
• Sandbox now: commands can write to the current folder, /tmp, /var/folders/
    tmp, /tmp/extra; approved or allow-listed commands can run outside the
    sandbox; permission-request tools are off
  Aggressive: write only in the current folder (where the Corbanu home and the
    nested-launch registry stay read-only): no extra writable folders, no /tmp
    or $TMPDIR; approved commands stay inside it too; escalation and permission-
    request tools are off
• Approvals now: on-request (reviewer: you)
  Aggressive: untrusted: you approve every command that is not known read-only
    (reviewer: you, never auto-review)
• Network now: on for agent commands; web search live
  Aggressive: off for agent commands; web search off
• Vault now: the vault store and sign-in file are readable to agent commands;
    secret-like environment variables are passed through (KEY, SECRET, TOKEN,
    VAULT, PASSWORD, PASSPHRASE, CREDENTIAL); login profiles or shell snapshots
    are used
  Aggressive: the vault store and sign-in file are unreadable to agent commands,
    and direct `corbanu vault …` commands are refused; secret-like environment
    variables (KEY, SECRET, TOKEN, VAULT, PASSWORD, PASSPHRASE, CREDENTIAL) are
    removed, and login profiles and shell snapshots are not used
• Child agents now: spawned agents get this session's values
  Aggressive: spawned agents get the same values; custom roles that would change
    them are refused at start; Claude panes are refused because Claude Code runs
    outside the sandbox (Claude Code sign-in still runs)
• Nested agents: refuse. An agent command that starts another agent (`corbanu
    exec`, `review`, `resume`, `fork`, a new session, `app-server` or `mcp-
    server`) is refused.
Press n to switch between refuse and pass. Nested launches read this when they
start.
Unchanged: model and provider, MCP servers, apps and hooks (they run outside the
sandbox), wallet scopes, and commands you have already allowed permanently (they
skip the prompt but stay sandboxed). `corbanu exec` that you start yourself and
IDE sessions are not covered yet.
Takes effect when you restart Corbanu Terminal; this session keeps its current
settings until then. Your config.toml is not modified.
n refuse/pass · enter confirm and save · esc back, nothing changes
