codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_level_picker__tests__security_level_picker_review_permissive.snap
---
source: tui/src/bottom_pane/security_level_picker_tests.rs
expression: "render(&picker, 80)"
---
Return to Permissive?
Protections removed at the next start:
Your own settings from config apply instead of each of these.
• Sandbox: write only in the current folder (where the Corbanu home and the
    nested-launch registry stay read-only): no extra writable folders, no /tmp
    or $TMPDIR; approved commands stay inside it too; escalation and permission-
    request tools are off
• Approvals: untrusted: you approve every command that is not known read-only
    (reviewer: you, never auto-review)
• Network: off for agent commands; web search off
• Vault: the vault store and sign-in file are unreadable to agent commands, and
    direct `corbanu vault …` commands are refused; secret-like environment
    variables (KEY, SECRET, TOKEN, VAULT, PASSWORD, PASSPHRASE, CREDENTIAL) are
    removed, and login profiles and shell snapshots are not used
• Model keys: provider keys and sign-ins are held by the isolated credential
    broker, which sends model requests for Corbanu; if it cannot start, model
    requests are refused, never sent directly (broker_model_auth;
    `broker_model_auth = false` in your config keeps it off)
• Child agents: spawned agents get the same values; custom roles that would
    change them are refused at start; Claude panes are refused because Claude
    Code runs outside the sandbox, unless contained_external_agents and
    secretless_agent_launch run them in it, asking you before every command,
    file edit and web request (reading files stays automatic) (Claude Code sign-
    in still runs)
Your own approval, sandbox, network, web search and environment settings from
config apply again exactly as saved. The Aggressive vault rule file is removed
at the next start.
Takes effect when you restart Corbanu Terminal; this session stays Aggressive
until then, and its pending approvals end with it.
enter confirm and save · esc back, nothing changes
