codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_level_picker__tests__security_level_picker_saved_aggressive.snap
---
source: tui/src/bottom_pane/security_level_picker_tests.rs
assertion_line: 80
expression: "render(&picker, 80)"
---
Saved: Aggressive
Restart Corbanu Terminal to activate Aggressive. Until then this session stays
Permissive. Resume this conversation with /resume after restarting.
enter or esc close
