codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_level_picker__tests__security_level_picker_saved_permissive_pending.snap
---
source: tui/src/bottom_pane/security_level_picker_tests.rs
assertion_line: 130
expression: "render(&picker, 80)"
---
Saved: Permissive
Restart Corbanu Terminal to activate Permissive. Until then this session stays
Aggressive. Resume this conversation with /resume after restarting.
enter or esc close
