codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_level_picker__tests__security_level_picker_unreadable.snap
---
source: tui/src/bottom_pane/security_level_picker_tests.rs
assertion_line: 146
expression: rendered
---
Security level
Active in this session: Aggressive
Stored level is unreadable or was changed outside /security (<home>/security_level.toml: unknown level `max`); Aggressive is enforced. Choose a level to repair it.

  Permissive
  Moderate  not available yet
> Aggressive  (active)

Sensitive access denied by default, built from existing sandbox, approval, network and exec-policy controls.
↑/↓ move · enter choose · esc close
